--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "15.3.2",
     "nodemailer": "^7.0.3",
     "react": "^19.0.0",
+    "react-cookie-consent": "^9.0.0",
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
