--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.2.0",
+    "@react-email/components": "^0.0.41",
     "@stripe/react-stripe-js": "^3.7.0",
     "@stripe/stripe-js": "^7.3.0",
     "@types/nodemailer": "^6.4.17",
@@ -20,6 +21,7 @@
     "next": "15.3.2",
     "nodemailer": "^7.0.3",
     "react": "^19.0.0",
+    "react-cookie": "^8.0.1",
     "react-cookie-consent": "^9.0.0",
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.0.0",
